# cnn_object_detector

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: split_dataset.py
