[tool.black]
line-length = 88

[tool.ruff]                        # Top-level Ruff settings
line-length = 88                   # (optional) match Black

[tool.ruff.lint]                   # â† NEW section name
select = ["E", "F", "W", "C90"]    # the rules you already chose
# ignore  = ["E501"]               # example: turn off a rule
# fix     = true                   # make `ruff check --fix` default

[tool.pytest.ini_options]
addopts = "-v"

[project]
name = "cnn_object_detector"
version = "0.1.0"
requires-python = ">=3.10"
